welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: type mismatch;
 found   : Unit
 required: Boolean
   if( nums(i)=9) {
              ^